<resources>
    <string name="app_name">Books App</string>
    <string name="open">Open Menu</string>
    <string name="close">Close Menu</string>
    <string name="description">Description :</string>
    <string name="page_count">Page count :</string>
    <string name="publisher">Publisher :</string>
    <string name="published_date">Published date :</string>
    <string name="by">By :</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="donate">Donate</string>
    <string name="authentication">Authentication</string>
    <string name="logout">Logout</string>
    <string name="not_available">Not provided</string>
    <string name="welcome_to_users_activity">Welcome to users activity</string>
    <string name="welcome_to_donate_activity">Welcome to donate activity</string>
    <string name="welcome_to_logout_activity">Welcome to logout activity</string>
    <string name="welcome_to_search_activity">Welcome to search activity</string>
    <string name="welcome_to_profile_activity">Welcome to profile activity</string>
    <string name="welcome_to_settings_activity">Welcome to settings activity</string>
    <string name="welcome_to_share_activity">Welcome to share activity</string>
    <string name="btn_search">Search</string>
    <string name="enter_book_name">Enter book name</string>
</resources>