<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_users"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/communicate">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_share"
                        android:icon="@drawable/ic_share"
                        android:title="@string/share" />
                    <item
                        android:id="@+id/nav_repair"
                        android:icon="@drawable/ic_donate"
                        android:title="@string/donate" />

                </group>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/authentication">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_logout"
                        android:title="@string/logout" />
                </group>
            </menu>
        </item>
    </group>
</menu>