<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:id="@+id/book_image"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_toEndOf="@id/book_image"
            android:text="book title" />
        <TextView
            android:id="@+id/book_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_below="@id/book_title"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:layout_toEndOf="@id/book_image"
            android:text="book subtitle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:id="@+id/by"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/book_image"
            android:layout_below="@id/book_subtitle"
            android:layout_marginStart="15dp"/>
        <TextView
            android:textColor="#000"
            android:id="@+id/book_authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_below="@id/book_subtitle"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/by"
            android:text="book authors" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_date"
            android:id="@+id/publisheddate"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/book_image"
            android:layout_below="@id/by"
            android:layout_marginStart="15dp"/>
        <TextView
            android:textColor="#000"
            android:id="@+id/book_published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_below="@id/book_authors"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/publisheddate"
            android:text="book Published Date" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            android:id="@+id/publisher"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/book_image"
            android:layout_below="@id/publisheddate"
            android:layout_marginStart="15dp"/>
        <TextView
            android:textColor="#000"
            android:id="@+id/book_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_below="@id/publisheddate"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/publisher"
            android:text="book Publisher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_count"
            android:id="@+id/page_count"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/book_image"
            android:layout_below="@id/publisher"
            android:layout_marginStart="15dp"/>
        <TextView
            android:textColor="#000"
            android:id="@+id/book_page_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/publisher"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/page_count"
            android:text="book page count" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/description"
            android:layout_marginTop="20dp"
            android:layout_below="@id/book_page_count"
            android:layout_marginStart="15dp"/>
        <TextView
            android:textColor="#000"
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="book description" />
        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:text="------------------------------------------------------------------------------------------------" />

    </RelativeLayout>

</RelativeLayout>